--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Speech Text Reader</title>
   </head>
   <body>
-    
+   <div class="container">
+      <h1>Speech Text Reader</h1>
+      <button id="toggle" class="btn btn-toggle">
+        Toggle Text Box
+      </button>
+      <main></main>
+    </div> 
   </body>
 </html>
